math-core/src/snapshots/math_core__tests__equal_after_plus.snap
---
source: math-core/src/lib.rs
expression: x+ = 4
---
<math>
    <mi>x</mi>
    <mo lspace="0" rspace="0">+</mo>
    <mo>=</mo>
    <mn>4</mn>
</math>
