math-core/src/snapshots/math_core__tests__equal_at_group_begin.snap
---
source: math-core/src/lib.rs
expression: "x{=x}"
---
<math>
    <mi>x</mi>
    <mrow>
        <mo lspace="0">=</mo>
        <mi>x</mi>
    </mrow>
</math>
