math-core/src/snapshots/math_core__tests__equal_at_group_end.snap
---
source: math-core/src/lib.rs
expression: "{x=}x"
---
<math>
    <mrow>
        <mi>x</mi>
        <mo rspace="0">=</mo>
    </mrow>
    <mi>x</mi>
</math>
