math-core/src/snapshots/math_core__tests__equal_at_start_of_pseudo_row.snap
---
source: math-core/src/lib.rs
expression: "x \\displaystyle = x"
---
<math>
    <mi>x</mi>
    <mrow displaystyle="true" scriptlevel="0">
        <mo>=</mo>
        <mi>x</mi>
    </mrow>
</math>
