math-core/src/snapshots/math_core__tests__equal_at_start_of_pseudo_row_punct.snap
---
source: math-core/src/lib.rs
expression: ", \\displaystyle = x"
---
<math>
    <mo>,</mo>
    <mrow displaystyle="true" scriptlevel="0">
        <mo lspace="0">=</mo>
        <mi>x</mi>
    </mrow>
</math>
