math-core/src/snapshots/math_core__tests__equal_before_right.snap
---
source: math-core/src/lib.rs
expression: "\\left(x=\\right)x"
---
<math>
    <mrow>
        <mo>(</mo>
        <mrow>
            <mi>x</mi>
            <mo rspace="0">=</mo>
        </mrow>
        <mo>)</mo>
    </mrow>
    <mi>x</mi>
</math>
