math-core/src/snapshots/math_core__tests__equal_equal.snap
---
source: math-core/src/lib.rs
expression: 4==4
---
<math>
    <mn>4</mn>
    <mo rspace="0">=</mo>
    <mo lspace="0">=</mo>
    <mn>4</mn>
</math>
