math-core/src/snapshots/math_core__tests__equal_squared.snap
---
source: math-core/src/lib.rs
expression: "==^2 x"
---
<math>
    <mo lspace="0" rspace="0">=</mo>
    <msup>
        <mo lspace="0">=</mo>
        <mn>2</mn>
    </msup>
    <mi>x</mi>
</math>
