math-core/src/snapshots/math_core__tests__exclamation_mark_spacing.snap
---
source: math-core/src/lib.rs
expression: x=!=x
---
<math>
    <mi>x</mi>
    <mo rspace="0">=</mo>
    <mo>!</mo>
    <mo>=</mo>
    <mi>x</mi>
</math>
