math-core/src/snapshots/math_core__tests__fraction_with_space.snap
---
source: math-core/src/lib.rs
expression: "\\frac 12"
---
<math>
    <mfrac>
        <mn>1</mn>
        <mn>2</mn>
    </mfrac>
</math>
